[gd_scene load_steps=3 format=2]

[ext_resource path="res://Source 9-3-2021/Spells/BaseSpell.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[node name="Spell" type="Area2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 4.17233e-07 )
scale = Vector2( 0.8, 0.8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Spell_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Spell_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
